Cancel swiping if pointercancel; fix ripple not poofing on pointercancel; white-space: pre-wrap for material lists (meant for events)

--- a/css/material.css
+++ b/css/material.css
@@ -266,6 +266,7 @@ ul.material-list.three-line li {
 }
 ul.material-list span {
   display: block;
+  white-space: pre-wrap;
 }
 ul.material-list span.primary {
   font-size: 16px;
